[gd_scene load_steps=12 format=3 uid="uid://b73rjyjkc6438"]

[ext_resource type="Script" uid="uid://11edikydb7ty" path="res://Objects/WorldObjects/Zipline/zipline_anchor.gd" id="1_5t2xk"]
[ext_resource type="Texture2D" uid="uid://bs0bibbso6a4w" path="res://Assets/Sprites/WorldObjects/ZiplineAnchor.png" id="1_x61qb"]
[ext_resource type="PackedScene" uid="uid://dr8t41k422n1f" path="res://Components/GrabComponent/grab_component.tscn" id="2_iqamj"]
[ext_resource type="Texture2D" uid="uid://ddtwx5g1xvn5d" path="res://Assets/Sprites/WorldObjects/ZiplineHook.png" id="4_5t2xk"]
[ext_resource type="AudioStream" uid="uid://cafh4a3eq71pk" path="res://Assets/Audio/SoundEffects/Grappling.wav" id="5_0soj7"]

[sub_resource type="Curve" id="Curve_5t2xk"]
resource_local_to_scene = true
_data = [Vector2(0, 0), 0.0, -0.0262488, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Animation" id="Animation_h01jy"]
resource_name = "Idle"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ZiplineAnchorSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3unxe"]
resource_name = "OnFinish"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ZiplineAnchorSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 0]
}

[sub_resource type="Animation" id="Animation_0soj7"]
resource_name = "OnInteract"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ZiplineAnchorSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_5t2xk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ZiplineAnchorSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4qpam"]
_data = {
&"Idle": SubResource("Animation_h01jy"),
&"OnFinish": SubResource("Animation_3unxe"),
&"OnInteract": SubResource("Animation_0soj7"),
&"RESET": SubResource("Animation_5t2xk")
}

[node name="ZiplineAnchor" type="Node2D"]
texture_filter = 1
script = ExtResource("1_5t2xk")
curve = SubResource("Curve_5t2xk")

[node name="RopeVisual" type="Line2D" parent="."]
unique_name_in_owner = true
width = 1.0

[node name="ZiplineAnchorSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_x61qb")
hframes = 3

[node name="GrabComponent" parent="." node_paths=PackedStringArray("nodeToFollow") instance=ExtResource("2_iqamj")]
unique_name_in_owner = true
nodeToFollow = NodePath("../GrabPos")

[node name="GrabPos" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="Sprite2D" type="Sprite2D" parent="GrabPos"]
position = Vector2(0, -2)
texture = ExtResource("4_5t2xk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_4qpam")
}

[node name="Grappling" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_0soj7")
volume_db = -10.0
pitch_scale = 2.5
bus = &"SoundEffects"
